# agentops-fw

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  CODEOWNERS  CODEX_SETUP.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_PLAN.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.addon  PHASE3_EXECUTION.md  PROGRESS.md  PUSH_TO_GITHUB.md  README.md  RESTART_HERE.md  SECURITY.md  SESSION_COMPLETE.md  STATUS.md  activate_mamba.sh  agent.md  codex_profile.sh  coiled_instance_types.md  criteria.p1.v0.yaml  criteria.yaml  entrypoint.sh  environment.yml  envrc  package-lock.json  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reward_weights.yaml  test_artifact_upload.py
.github/: release-drafter.yaml
.github/workflows/: build.yaml  ci.yaml  ci.yml  release-drafter.yaml  release-preview.yaml  release-prod.yaml  release-staging.yaml
agent_stable_slo/: cli.py
agent_stable_slo/bench/: benchmark_runner.py  cli.py  concurrency.py  leaderboard.py  power_monitor.py  slo_tiers.py
agent_stable_slo/config/: __init__.py  criteria_v1.py
agent_stable_slo/eval/: detailed_capture.py  faithfulness_judge.py  moe_profiler.py  p1_eval_harness.py  stability_harness.py
agent_stable_slo/logging/: structured.py  wandb_utils.py  weave_integration.py  weave_ops.py
agent_stable_slo/reasoning_stack/: __init__.py  cli.py  config.py  data.py  mlx_runner.py  pipeline.py  torch_model.py  torch_trainer.py
agent_stable_slo/rewards/: composite.py  schema_reward.py  slo_reward.py  stability_reward.py
agent_stable_slo/rollout/: engine.py
agent_stable_slo/train/: ane_grpo_adapter.py  grpo_finetune.py  grpo_train_loop.py  grpo_trl.py  mlx_grpo_adapter.py  mlx_train_config.py
agent_stable_slo/utils/: __init__.py  checkpoint.py  config.py  data.py  dist.py  hardware.py  repro.py
agentops_fw/: cli.py  core.py
ane-training/: .gitignore  Makefile
ane-training/private/: ane_runtime.h  ane_runtime.m  bootstrap_runtime.h  bootstrap_runtime.m  coreml_runtime.h  coreml_runtime.m  grpo_private.m  iosurface_io.h  iosurface_io.m  mil_gen.h  mil_gen.m  mil_qwen.h  mil_qwen.m  mil_stories.h  mil_stories.m  private_backward.h  private_backward.m  private_forward.h  private_forward.m
ane-training/public/: grpo_public.m  public_backward.h  public_backward.m  public_forward.h  public_forward.m
ane-training/scripts/: analyze_experiments.py  compare_results.py  download_weights.py  gen_backward_kernels.py  gen_coreml_models.py  gen_spike_multi_input.py  hard_tasks.jsonl  resume_experiments.sh  run_experiments.sh  run_mlx_grpo.py  run_p9_seed_sweep.py  (+4 more)
archive/: README.md  RESULTS_MAP.md
arxiv_submissions_final/: SUBMISSION_GUIDE.md
bench/: concurrency.py
coiled/: requirements.txt
configs/: data_prep.yaml  ecomm.yaml  ecomm_loyalty.yaml  gaming.yaml  marketing_kaggle_local.yaml  media_demo_scale.yaml  media_small.yaml  media_testing_50_mil.yaml  media_testing_5_mil.yaml  media_testing_mils.yaml  sports_and_concert.yaml  suites.yaml  wine_and_cheese.yaml  wine_and_cheese_local_full.yaml  wine_and_cheese_uc_read_local_write.yaml
data/: mlx_train.jsonl  mlx_valid.jsonl  valid.jsonl
docs/: JOSS_CHECKLIST.md  ONE_PAGER.md  c360_master_verification.md  c360_run_master_table.md  data_doctor_enhancement_spec.md  grpo_loop.md  requirements.md  run_verification_2026-01-21.md  t_suite.md
eval/: stability_harness.py
example-data/: wine_cheese.csv  wine_cheese.parquet
notebooks/: p1_eval.ipynb
paper/: paper.bib  paper.md
papers/: Outline.md  P1_P6_CONSISTENCY_CHECKLIST.md  PAPER_DROPIN_NOTES.md  REVISION_CHECKLIST.md  future_papers_outline.md
reports/: WandB_MANIFEST.json  wandb_report_template.md
results/: ane_smoke_test.json  constrained.csv  p2_all_runs.csv  p2_by_model.csv  p2_training_results.csv  p2_training_results.json  p2_training_summary.json  posthoc.csv
rewards/: slo_reward.py
scripts/: FULL_STUDY_ESTIMATES.md  add_llm_config_comments.py  aggregate_p2_results.py  build_clinc_tasks.py  build_hotpot_tasks.py  build_t4_bfcl.py  build_t5_swebench.py  build_t_tasks.py  ci.sh  compute_kappa.py  continue_from_falcon.sh  continue_from_qwen3.sh  convert_ane_models.py  convert_qwen35_ane.py  create_multitask_dataset.py  demo_p9_ane.py  demo_p9_full.py  download_all_models.py  e2e_grpo_proof.py  env_lm_remote.sh  env_remote_63.sh  env_remote_72.sh  eval_ane_suite.py  eval_clinc.py  eval_mlx_suite.py  eval_t_suite.py  expand_hotpot_variants.py  expand_t1_t2_samples.py  expand_t2_tasks.py  expand_t3_tools.py  generate_mlx_dataset.py  generate_tables.py  generate_training_curves.py  lock_pip_requirements.py  p1_smoke_lmstudio.sh  p2_comparison_study.md  package_artifacts.py  prepare_clinc150.py  reconcile_p2_results.py  retry_failed_runs.py  (+33 more)
tasks/: README.md  build_public_suites.py  clinc150_labels.json  clinc_en.jsonl  faithfulness_mini.jsonl  faithfulness_plus.jsonl  fc_tasks.jsonl  generate_robust_suite.py  generate_robust_suite_gold.py  hotpot_dev.jsonl.bak  lessons.md  pilot.json  public_gsm8k.jsonl  public_humaneval.jsonl  public_mbpp.jsonl  public_truthfulqa.jsonl  robust_eval.jsonl  robust_eval_gold.jsonl  t1_expanded.jsonl  t1_structured.jsonl  t1t5_balanced.jsonl  t1t5_natural.jsonl  t2_expanded.jsonl  t2_grounded.jsonl  t3_tools.jsonl  t4_bfcl.jsonl  t5_swebench.jsonl  tiny_smoke.jsonl  tiny_smoke_schema.json
tests/: conftest.py  test_ane_grpo.py  test_ane_provider.py  test_bench.py  test_bench_cli.py  test_checkpoint_resume.py  test_clinc_labels.py  test_detailed_capture.py  test_grad_accum.py  test_grpo_train_loop_smoke.py  test_hardware.py  test_hardware_comparison.py  test_mlx_provider.py  test_mlx_training.py  test_moe_profiler.py  test_power_monitor.py  test_reasoning_stack_config.py  test_reasoning_stack_data.py  test_reasoning_stack_mlx.py  test_rewards.py  test_validators.py  test_validity.py  test_wandb_utils.py  test_weave_integration.py
tools/: aggregate_disagreement.py  aggregate_eval.py  build_arxiv_sources.py  check_criteria.py  judge_faithfulness.py  run_mlx_eval.py  score_eval.py  slo_metrics.py
train/: grpo_trl.py
(+445 files in other folders)
