[project]
name            = "neuralift-c360-prep"
version         = "0.1.0"
description     = "Neuralift ETL helper library (internal use)"
requires-python = ">=3.12,<3.13"
authors         = [{ name = "Mike Maloney", email = "mike@neuralift.ai" }]

dependencies = [
  "python-dateutil",
  "databricks-sql-connector",
  "databricks-sdk>=0.38.0",
  "holidays",
  "loguru>=0.7.2,<0.8",
  "matplotlib",
  "nbconvert==7.16.6",
  "numpy>=2.2.6,<3",
  "openai==1.70.0",
  "openrouteservice==2.3.3",
  "packaging==24.2",
  "pandas>=2.2.3,<3",
  "pydantic==2.11.2",
  "mlflow>=3.0",
  "dask[complete]>=2025.9.1,<2026",
  "distributed>=2025.9.1,<2026",
  "dask-expr==2.0.0",
  "coiled>=1.129.2,<2",
  "deltalake>=0.18.0",
  "fsspec>=2024.6.1",
  "s3fs>=2025.12.0,<2026",
  "pyarrow>=21.0.0,<23",
  "uuid6>=2025.0.1",
  "rich>=14.2.0,<15",
  "scipy>=1.15.1,<2",
  "seaborn",
  "scikit-learn>=1.6,<1.8",
  "spacy",
  "statsmodels",
  "tabulate==0.9.0",
  "timezonefinder",
  "tqdm==4.67.1",
  "unidecode",
  "user_agents",
  "uszipcode>=0.2.6,<1.0",
  "wandb>=0.23.1,<0.24",
  "weave==0.51.42",
  "wordfreq",
  "PyYAML",
  "instructor",
  "tenacity>=9.0.0,<10.0.0",
  "protobuf>=5,<6",
  "sqlalchemy<2.0",
  "sqlalchemy_mate>=1.4.28.3,<2",
  "python-Levenshtein>=0.25",
  "typing_extensions>=4.12,<5",
  "cytoolz==0.12.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build", "hatchling"]

# ---------------------------------------------------------------------------
#  Build backend
# ---------------------------------------------------------------------------
[build-system]
requires      = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralift_c360_prep"]

[project.scripts]
neuralift_c360_prep = "neuralift_c360_prep.cli:main"
points_and_labels = "neuralift_c360_prep.points_and_labels:main"

# ---------------------------------------------------------------------------
#  Pixi workspace
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
name      = "neuralift-c360-prep"
channels  = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.dependencies]          # Conda binaries
python         = "3.12.*"
pip            = "*"
numpy          = ">=2.2.6,<3"      # aligns with neuralift_segmenter (note: databricks-connect expects NumPy<2)
scipy          = ">=1.15.1,<2"
scikit-learn   = ">=1.6,<1.8"
mapclassify = ">=2.8.1,<3"

[tool.pixi.pypi-dependencies]     # PyPI wheels
neuralift_c360_prep = { path = "." }

[tool.pixi.environments.dev]
features = ["dev"]

[tool.pixi.tasks]
build-wheel = "python -m hatchling build -t wheel"
rebuild     = "pixi clean --environment default && pixi clean cache && pixi install"
test        = "pytest -q"
lint        = "ruff check ."
format-check = "ruff format --check ."
run-wine-and-cheese = "neuralift_c360_prep --config configs/wine_and_cheese.yaml --runtime coiled"
neuralift_c360_prep = "neuralift_c360_prep"
points_and_labels = "points_and_labels"
