[project]
name            = "neuralift-c360-prep"
description     = "Neuralift c360 Prep library (internal use)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dynamic = ["version"]
authors         = [{ name = "Mike Maloney", email = "mike@neuralift.ai" }]

[project.urls]
Home = "https://github.com/neuralift-ai/neuralift_c360_prep"

# ---------------------------------------------------------------------------
#  Build backend
# ---------------------------------------------------------------------------
[build-system]
requires      = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralift_c360_prep"]

[project.scripts]
neuralift_c360_prep = "neuralift_c360_prep.cli:main"
points_and_labels = "neuralift_c360_prep.points_and_labels:main"

# ---------------------------------------------------------------------------
#  Pixi workspace
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
name      = "neuralift-c360-prep"
channels  = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]          # Conda binaries
databricks-sql-connector = "*"
databricks-sdk = ">=0.38.0"
deltalake = ">=0.18.0"
coiled = ">=1.129.2,<2"
s3fs = ">=2025.12.0,<2026"
numpy = ">=2.2.6,<3"      # aligns with neuralift_segmenter (note: databricks-connect expects NumPy<2)
pandas = ">=2.2.3,<3"
pydantic = "==2.11.2"
dask = ">=2025.9.1,<2026"
distributed = ">=2025.9.1,<2026"
fsspec = ">=2024.6.1"
uuid6 = ">=2025.0.1"
pyyaml = "*"
timezonefinder = "*"
tenacity = ">=9.0.0,<10.0.0"
tabulate = "==0.9.0"
bokeh = ">=3.1.0"

[tool.pixi.pypi-dependencies]     # PyPI wheels
openai = ">=1.82,<2"
instructor = "*"
uszipcode = ">=0.2.6,<1.0"
pyarrow = ">=21.0.0,<23"
weave = "==0.51.42"
python-dotenv = ">=1.0.0,<2"
neuralift_c360_prep = { path = "." }

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = "*"
ruff = ">=0.12.4,<0.13"
python-build = "*"
tabulate = "==0.9.0"

[tool.pixi.tasks]
rebuild     = "pixi clean --environment default && pixi clean cache && pixi install"
test        = "pytest -q"
lint        = "ruff check ."
format      = "ruff format ."
format-check = "ruff format --check ."
run-wine-and-cheese = "neuralift_c360_prep --config configs/wine_and_cheese.yaml --runtime coiled"
neuralift_c360_prep = "neuralift_c360_prep"
points_and_labels = "points_and_labels"

[tool.pixi.environments.dev]
features = ["dev"]
